# agent-trace-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: product_ads_sample.json
demo/: app.js  index.html  styles.css
demo/data/: sample_trace.js
docs/: architecture.md  datasets.md  langsmith.md
examples/: eval_cases.json  langgraph_ad_eval_cases.json  langgraph_ad_traces.jsonl  sample_trace.jsonl
scripts/: fetch_public_ads_dataset.py
src/agent_trace_tool/: __init__.py  __main__.py  analyzer.py  evaluator.py  langgraph_ad_agent.py  langsmith_experiment.py  models.py  parser.py  render.py
tests/: test_evaluator.py  test_langgraph_ad_agent.py  test_langsmith_experiment.py  test_parser.py
