[project]
name = "agent-trace-tool"
version = "0.1.0"
description = "Lightweight Agent trace parser, analyzer and evaluation harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["agent", "tracing", "observability", "evaluation", "llm"]

[project.scripts]
agent-trace-tool = "agent_trace_tool.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_tool"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
